[package]
name = "snappy"
version = "0.1.0"
authors = ["dodgez <zacharysdodge@gmail.com>"]
edition = "2018"
repository = "https://github.com/dodgez/snappy"
description = "A basic distributed version control system inspired by git."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
colored = "1.9"
diff = "0.1.12"
glob = "0.3.0"
sha2 = "0.8.1"
whoami = "0.7.0"
